Initial checkin for Hindi translation

--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 <head>
 
 	<!-- Place this data between the <head> tags of your website -->
-	<title>Parable of the Polygons - a playable post on the shape of society</title>
-	<meta name="description" content="A playable post on how harmless choices can make a harmful world." />
+	<title>बहुभुजों की गाथा - समाज के स्वरूप पर एक संवादात्मक चर्चा</title>
+	<meta name="description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।" />
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- Schema.org markup for Google+ -->
-	<meta itemprop="name" content="Parable of the Polygons">
-	<meta itemprop="description" content="A playable post on how harmless choices can make a harmful world.">
+	<meta itemprop="name" content="बहुभुजों की गाथा">
+	<meta itemprop="description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।">
 	<meta itemprop="image" content="http://ncase.me/polygons/social/thumbnail.png">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="Parable of the Polygons">
-	<meta name="twitter:description" content="A playable post on how harmless choices can make a harmful world.">
+	<meta name="twitter:title" content="बहुभुजों की गाथा">
+	<meta name="twitter:description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।">
 	<meta name="twitter:creator" content="@vihartvihart">
 	<meta name="twitter:image" content="http://ncase.me/polygons/social/thumbnail.png">
 
 	<!-- Open Graph data -->
-	<meta property="og:title" content="Parable of the Polygons">
+	<meta property="og:title" content="बहुभुजों की गाथा">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/polygons">
 	<meta property="og:image" content="http://ncase.me/polygons/social/thumbnail.png">
-	<meta property="og:description" content="A playable post on how harmless choices can make a harmful world.">
-	<meta property="og:site_name" content="Parable of the Polygons">
+	<meta property="og:description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।">
+	<meta property="og:site_name" content="बहुभुजों की गाथा">
 
 	<!-- CSS -->
 	<link href="css/index.css" rel="stylesheet" type="text/css">
@@ -50,24 +50,22 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 
-		<p><strong>This is a story of how harmless choices can make a harmful world.</strong></p>
+		<p><strong>यह निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज की कहानी है।</strong></p>
 		<p>
-			These little cuties are 50% Triangles, 50% Squares, and 100% slightly shapist.
-			But only slightly!
-			In fact, every polygon <i>prefers</i> being in a diverse crowd:
+			इन प्यारे बहुभुजों में से कुछ त्रीकोण हैं, कुछ चौकोर। पर हर बहुभुज थोड़ा सा "आकारवादी" है। पर बहुत ही थोड़ा सा! वास्तव में हर कोई विविध पड़ोसियों के बीच <i>ही</i> सुखी है।
 		</p>
 
 		<iframe id="mini_intro" playable src="play/mini/mini_intro.html" width="800" height="385" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			You can only move them if they're unhappy with their immediate neighborhood.
-			Once they're OK where they are, <i>you can't move them until they're unhappy with their neighbors again</i>.
-			They've got one, simple rule:
+			कोई भी बहुभुज तभि हिलाया जा सकता है यदि वह अपने पड़ोसियों के बीच उदास है।
+			यदि वह अपने स्थान पर सुखी है, <i>तो उसे तब तक नहीं हिलाया जा सकता जब तक वह फिर से अपने पड़ोसियों के बीच उदास न हो</i>।
+			यह बहुभुज एक सरल नीयम का पालन करते हैं:
 		</p>
 
 		<p style="text-align:center">
 			<b>
-			“I wanna move if less than 1/3 of my neighbors are like me.”
+			“यदि मेरे पड़ोसियों में कम से कम १/३ मेरे हम-आकार नहीं हैं, तो मैं अपना स्थान बदलना चाहूँगा।”
 			</b>
 		</p>
 		<iframe playable src="play/mini/mini_unhappy.html" width="250" height="320" scrolling="no" style="float:left; margin:0; margin-left:10px; position:relative; left:-30px"  embedded></iframe>
@@ -79,14 +77,12 @@
 		</div>
 
 		<p>
-			Harmless, right?
-			Every polygon would be happy with a mixed neighborhood.
-			Surely their small bias can't affect the larger shape society that much?
-			Well...
+			कितना हानिहीन समाज है ना यह? हर बहुभुज विविध पड़ोसियों के बीच सुखी है। 
+			क्या इनका सूक्ष्म आकारवाद इस समाज के स्वरूप को प्रभावित कर पायेजा? आईये देखें..
 		</p>
 		<div class="instruction">
-			drag &amp; drop unhappy polygons until nobody is unhappy:<br>
-			<span style="font-size:18px">(just move them to random empty spots. don't think too much about it.)</span>
+			उदास बहुभुजों को तब तक खींचके खिसकायें जब तक सब सुखी न हो जाएँ:<br>
+			<span style="font-size:18px">(ज़्यादा सोचिये मत, अनियमित ढ़ंग से इन्हें खाली स्थानों में डालिये।)</span>
 		</div>
 
 	</div>
@@ -99,23 +95,20 @@
 	<!-- CHAPTER -->
 	<div class="chapter"> 
 		<p>
-			And... our shape society becomes super segregated. Daaaaang.
+			देखा आपने, यह आकार-समाज किस तरह पृथक हो गया?
 		</p>
 		<p>
-			Sometimes a neighborhood just becomes square,
-			and it's not their fault if no triangles wanna stick around.
-			And a triangular neighborhood would welcome a square, but
-			they can't help it if squares ain't interested.
+			कभी एक पड़ोस में चौकोर ज़्यादा हो जाते हैं, परन्तु यह उनका दोष नहीं यदि त्रिकोण वहाँ से प्रवास कर जाते हैं। इसि प्रकार, किसी भी त्रिकोण-पड़ोस में एक चौकोर का स्वागत होगा, परन्तु यह उनका दोष नहीं कि कोई चौकोर वहाँ बसना नहीं चाहते।
 		</p>
 		
 		<iframe id="mini_neighborhood" playable src="play/mini/mini_neighborhood.html" width="730" height="240" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			In this next bit, unhappy shapes automatically move to random empty spots.
-			There's also a graph that tracks how much segregation there is over time.
+			अगले अनुकरण में उदास बहुभुज किसी भी अनीयमित स्थान पर अपने आप चले जाते हैं।
+			एक लेखा-चित्र में समय के साथ बदलती आकार-समाज की पृथक्करण मात्रा का भी चित्रण है।
 		</p>
 		<div class="instruction">
-			run this simulation a few times. what happens?
+			इस अनुकरण को कुछ बार चलाकर देखिये कि क्या होता है।
 		</div>
 	</div>
 
@@ -127,23 +120,21 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			What's up with that? These are good shapes, nice shapes.
-			And yet, though every individual only has a slight bias, the entire shape society cracks and splits.
+			यह क्यूँ हो रहा है? हर किसी का आकारवादी झुकाव बहुत ही आकार-समाज है, परन्तु समूचा आकार-समाज जुदा हो जाता है।
 		</p>
 		
 		<iframe id="mini_checkerboard" playable src="play/mini/mini_checkerboard.html" width="730" height="240" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			<strong>Small individual bias can lead to large collective bias.</strong>
+			<strong>लघु व्यक्तिगत झुकाव विशाल सामूहिक झुकाव का कारण बन सकता है।</strong>
 		</p>
 		<p>	
-			Equality is an unstable equilibrium.
-			The smallest of bias can push a whole society past the tipping point.
-			Well, what if we taught these shapes to have zero bias?
-			(Or if you're feeling particularly nasty today, more bias?)
+			समानता एक अस्थिर संतुलन है।
+			बहुत लघु झुकाव पूरे समाज को एक चिकनी ढलान पे धकेल सकता है।
+			क्या होगा यदि इन बहुभुजों का आकारवाद समाप्त कर दिया जाये? (या बढ़ा दिया जाये?)
 		</p>
 		<div class="instruction">
-			use the slider to adjust the shapes' individual bias:
+			स्लाईडर द्वारा बहुभुजों की आकारवाद मात्रा बदलें:
 		</div>
 	</div>
 
