--- a/play/mini/mini_happy.html
+++ b/play/mini/mini_happy.html
@@ -7,8 +7,8 @@
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px">
-		<span style="color:#dd3939">happy:</span>
-		2 out of 6 neighbors are like me. exactly 1/3.
+		<span style="color:#dd3939">सुखी:</span>
+		६ पड़ोसियों मे से २ हम-आकार। ठीक १/३।
 	</div>
 
 	<script>
