--- a/play/mini/mini_unhappy.html
+++ b/play/mini/mini_unhappy.html
@@ -7,8 +7,8 @@
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px">
-		<span style="color:#dd3939">unhappy:</span>
-		only 1 out of 6 neighbors are like me. less than 1/3.
+		<span style="color:#dd3939">उदास:</span>
+		६ पड़ोसियों में से १ हम-आकार। १/३ से कम।
 	</div>
 
 	<script>
