first pass for hindi translation

--- a/play/mini/mini_bias_2.html
+++ b/play/mini/mini_bias_2.html
@@ -7,9 +7,9 @@
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777">
-		wants to move if <span style="color:#dd3939">less than 50%</span> of
+		यदि हम-आकार पड़ोसी <span style="color:#dd3939">५०% से कम हैं</span> तो
 		<br>
-		their neighbors are like them
+		मैं स्थान बदलूँगा
 	</div>
 	<div id="reset" onclick="reset()">reset</div>
 
