--- a/play/mini/mini_nonconform.html
+++ b/play/mini/mini_nonconform.html
@@ -6,12 +6,12 @@
 <body>
 	<canvas id="canvas"></canvas>
 	<br>
-	<div style="text-align:center; margin:10px 0; color:#777">
-		wants to move if <span style="color:#dd3939">more than 90%</span> of
+	<div style="text-align:center; margin:0px 0; color:#777">
+		यदि पड़ोसियों में से <span style="color:#dd3939">९०% से ज़्यादा</span> हम-आकार
 		<br>
-		their neighbors are like them
+		हैं तो मैं स्थान बदलूँगा
 	</div>
-	<div id="reset" onclick="reset()">reset</div>
+	<div id="reset" onclick="reset()">फिर से</div>
 
 	<script>
 	var TILE_SIZE = 80;
