--- a/play/outro/outro.html
+++ b/play/outro/outro.html
@@ -63,14 +63,14 @@
 		<div id="intro_shading"></div>
 		<div id="share_text">
 
-			SHARE<span style="position:relative;top:-5px">:</span>
+			शेयर कीजिए<span style="position:relative;top:-5px">:</span>
 
-			<a data-popup-url="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;t=Parable of the Polygons: a playable post on how harmless choices can make a harmful world."
+			<a data-popup-url="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;t=बहुभुजों की बहुगाथा: निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।"
 				data-popup-width="626" data-popup-height="436"
 				onclick="return sharePopup.call(this,event);">
 				<img src="icons/facebook.png" width="60" height="60"/></a>
 
-			<a data-popup-url="https://twitter.com/share?url=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;text=Parable of the Polygons: how harmless choices can make a harmful world. From @vihartvihart and @ncasenmare."
+			<a data-popup-url="https://twitter.com/share?url=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;text=बहुभुजों की बहुगाथा: निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा। @vihartvihart एवं @ncasenmare द्वारा।"
 				data-popup-width="640" data-popup-height="400"
 				onclick="return sharePopup.call(this,event);">
 				<img src="icons/twitter.png" width="60" height="60"/></a>
@@ -80,12 +80,12 @@
 				onclick="return sharePopup.call(this,event);">
 				<img src="icons/googleplus.png" width="60" height="60"/></a>
 
-			<a data-popup-url="https://www.tumblr.com/share/link?url=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;name=Parable of the Polygons&amp;description=A playable post on how harmless choices can make a harmful world."
+			<a data-popup-url="https://www.tumblr.com/share/link?url=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;name=बहुभुजों की बहुगाथा&amp;description=निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।"
 				data-popup-width="446" data-popup-height="430"
 				onclick="return sharePopup.call(this,event);">
 				<img src="icons/tumblr.png" width="60" height="60"/></a>
 
-			<a href="http://www.reddit.com/submit" onclick="window.open('http://www.reddit.com/submit?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'The Parable of the Polygons','toolbar=no,width=840,height=750'); return false;">
+			<a href="http://www.reddit.com/submit" onclick="window.open('http://www.reddit.com/submit?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'बहुभुजों की बहुगाथा','toolbar=no,width=840,height=750'); return false;">
         		<img src="icons/reddit.png" alt="submit to reddit" width="60" height="60" border="0"/></a>
 
 			<a href="http://www.stumbleupon.com/submit?url=http://ncase.me/polygons/" target="_blank">
@@ -93,22 +93,22 @@
 
 		</div>
 		<div id="pd_text">
-			<span style="font-size:35px; color:#fff">this playable post is
-				<a target="_blank" href="http://creativecommons.org/publicdomain/zero/1.0/" style="color:#fff">public domain</a>.
+			<span style="font-size:35px; color:#fff">यह संवादात्मक लेख 
+				<a target="_blank" href="http://creativecommons.org/publicdomain/zero/1.0/" style="color:#fff">सार्वजनिक क्षेत्र</a> में प्रकाशित है।
 			</span>
 			<div style="width:600px; margin:5px auto; font-size:18px; letter-spacing:0; font-weight:normal">
-				please feel free to use this in your classrooms,
-				make video/picture/text adaptations,
-				or modify the <a href="https://github.com/ncase/polygons" target="_blank">source code</a>!
-				attribution is not mandatory, but super appreciated.
-				we are <a href="http://vihart.com/" target="_blank">vi hart</a> and <a href="http://www.patreon.com/ncase" target="_blank">nicky case</a>.
+				आप बेझिझक कक्षाओं में, आॅडियो/विडियो/लिखित रूपांतरों में इसका उपयोग कर सकते हैं।
+				चाहें तो आप इसका  
+				<a href="https://github.com/ncase/polygons" target="_blank">सोर्स कोड</a> भी बदलकर उपयोग कर सकते हैं!
+				अधिकार बयान करना अनिवार्य नहीं, लेकिन अतयन्त सराहनीय है।
+				हम हैं - <a href="http://vihart.com/" target="_blank">vi hart</a> और <a href="http://www.patreon.com/ncase" target="_blank">nicky case</a>.
 			</div>
 			<div style="width:600px; margin:25px auto; font-size:18px; letter-spacing:0; font-weight:normal">
-				show us how you're using and remixing Parable of the Polygons!
+				हमें बताईए कि आप "बहुभुजों की बहुगाथा" का किस प्रकार उपयोग और प्रयोग कर रहे हैं!
 				<br>
-				tweet us at
-				<a href="https://twitter.com/vihartvihart" target="_blank">@vihartvihart</a> and
-				<a href="https://twitter.com/ncasenmare" target="_blank">@ncasenmare</a>.
+				हमें
+				<a href="https://twitter.com/vihartvihart" target="_blank">@vihartvihart</a> और 
+				<a href="https://twitter.com/ncasenmare" target="_blank">@ncasenmare</a> पर त्वीट कीजिए।
 			</div>
 		</div>
 
