corrections and enhancements

--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 <head>
 
 	<!-- Place this data between the <head> tags of your website -->
-	<title>बहुभुजों की बहुगाथा - समाज के स्वरूप पर एक संवादात्मक चर्चा</title>
-	<meta name="description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।" />
+	<title>बहुभुजों की गाथा - समाज के स्वरूप पर एक संवादात्मक लेख</title>
+	<meta name="description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक लेख।" />
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- Schema.org markup for Google+ -->
-	<meta itemprop="name" content="बहुभुजों की बहुगाथा">
-	<meta itemprop="description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।">
+	<meta itemprop="name" content="बहुभुजों की गाथा">
+	<meta itemprop="description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक लेख।">
 	<meta itemprop="image" content="http://ncase.me/polygons/social/thumbnail.png">
 
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="बहुभुजों की बहुगाथा">
-	<meta name="twitter:description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।">
+	<meta name="twitter:title" content="बहुभुजों की गाथा">
+	<meta name="twitter:description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक लेख।">
 	<meta name="twitter:creator" content="@vihartvihart">
 	<meta name="twitter:image" content="http://ncase.me/polygons/social/thumbnail.png">
 
 	<!-- Open Graph data -->
-	<meta property="og:title" content="बहुभुजों की बहुगाथा">
+	<meta property="og:title" content="बहुभुजों की गाथा">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/polygons">
 	<meta property="og:image" content="http://ncase.me/polygons/social/thumbnail.png">
-	<meta property="og:description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।">
-	<meta property="og:site_name" content="बहुभुजों की बहुगाथा">
+	<meta property="og:description" content="निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक लेख।">
+	<meta property="og:site_name" content="बहुभुजों की गाथा">
 
 	<!-- CSS -->
 	<link href="css/index.css" rel="stylesheet" type="text/css">
@@ -52,20 +52,20 @@
 
 		<p><strong>यह निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज की कहानी है।</strong></p>
 		<p>
-			इन प्यारे बहुभुजों में से कुछ त्रिकोण हैं, कुछ चौकोर। पर ये बहुभुज थोड़े से "आकारवादी" हैं। पर बहुत ही थोड़े से! वास्तव में हर कोई विविध पड़ोसियों के बीच <i>ही</i> सुखी है।
+			इन प्यारे बहुभुजों में से कुछ त्रिकोण हैं, कुछ चौकोर। और सब के सब थोड़े से "आकारवादी" हैं। पर बहुत ही थोड़े से! वास्तव में हर कोई विविध पड़ोसियों के बीच <i>ही</i> सुखी है।
 		</p>
 
 		<iframe id="mini_intro" playable src="play/mini/mini_intro.html" width="800" height="385" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			किसी बहुभुज को तभि हिलाया जा सकता है यदि वह अपने पड़ोसियों के बीच उदास हो।
-			यदि वह अपने स्थान पर सुखी है, <i>तो उसे तब तक नहीं हिलाया जा सकता जब तक वह फिर से अपने पड़ोसियों के बीच उदास न हो जाए</i>।
+			एक बहुभुज को तभी हिलाया जा सकता है यदि वह अपने पड़ोसियों के बीच उदास हो।
+			गर वह अपने स्थान पर सुखी है, <i>तो उसे तब तक नहीं हिलाया जा सकता जब तक वह फिर से अपने पड़ोसियों के बीच उदास न हो जाए</i>।
 			यह बहुभुज एक सरल नीयम का पालन करते हैं:
 		</p>
 
 		<p style="text-align:center">
 			<b>
-			“यदि मेरे पड़ोसियों में कम से कम १/३ मेरे हम-आकार नहीं हैं, तो मैं अपना स्थान बदलना चाहूँगा।”
+			“यदि मेरे पड़ोसियों में <i>हमआकार</i> १/३ से कम हैं, तो मैं अपना स्थान बदलना चाहूँगा।”
 			</b>
 		</p>
 		<iframe playable src="play/mini/mini_unhappy.html" width="250" height="320" scrolling="no" style="float:left; margin:0; margin-left:10px; position:relative; left:-30px"  embedded></iframe>
@@ -77,7 +77,7 @@
 		</div>
 
 		<p>
-			कितना हानिहीन आकार-समाज है ना यह? हर बहुभुज विविध पड़ोसियों के बीच सुखी है। 
+			कितना हानिहीन आकार समाज है ना यह? हर बहुभुज विविध पड़ोसियों के बीच सुखी है। 
 			क्या इनका लघु आकारवाद इस समाज के स्वरूप को प्रभावित कर पाएगा? आईए देखें..
 		</p>
 		<div class="instruction">
@@ -95,20 +95,20 @@
 	<!-- CHAPTER -->
 	<div class="chapter"> 
 		<p>
-			देखा आपने, यह आकार-समाज किस तरह पृथक हो गया?
+			देखा आपने, यह आकार समाज किस तरह पृथक हो गया?
 		</p>
 		<p>
-			कभी एक पड़ोस में चौकोर ज़्यादा हो जाते हैं, पर यह उनका दोष नहीं यदि त्रिकोण वहाँ से प्रवास कर जाते हैं। इसि प्रकार, किसी भी त्रिकोण-पड़ोस में एक नए चौकोर का स्वागत होगा, पर यह उनका दोष नहीं कि कोई चौकोर वहाँ बसना नहीं चाहते।
+			कभी एक पड़ोस में चौकोर ज़्यादा हो जाते हैं, पर यह उनका दोष नहीं कि त्रिकोण वहाँ से प्रवास कर जाते हैं। इसि प्रकार, किसी भी त्रिकोण-पड़ोस में एक नए चौकोर का स्वागत होगा, पर यह उनका दोष नहीं कि कोई चौकोर वहाँ बसना नहीं चाहता।
 		</p>
 		
 		<iframe id="mini_neighborhood" playable src="play/mini/mini_neighborhood.html" width="730" height="240" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			अगले अनुकरण में उदास बहुभुज किसी भी अनियमित स्थान पर अपने आप चले जाते हैं।
-			एक लेखा-चित्र में समय के साथ बदलती आकार-समाज की पृथक्करण मात्रा का भी चित्रण है।
+			अगले अनुरूपण में उदास बहुभुज किसी भी अनियमित स्थान पर अपने आप चले जाते हैं।
+			एक लेखाचित्र में समय के साथ बदलती आकार समाज की पृथक्करण मात्रा का भी चित्रण है।
 		</p>
 		<div class="instruction">
-			इस अनुकरण को कुछ बार चलाकर देखिए कि क्या होता है।
+			इस अनुरूपण को कुछ बार चलाकर देखिए कि क्या होता है।
 		</div>
 	</div>
 
@@ -120,7 +120,7 @@
 	<!-- CHAPTER -->
 	<div class="chapter">
 		<p>
-			यह क्यूँ हो रहा है? हर किसी का आकारवादी झुकाव बहुत ही लघु है, पर समूचा आकार-समाज जुदा हो जाता है।
+			यह क्यूँ हो रहा है? हर किसी का आकारवादी झुकाव बहुत ही लघु है, पर समूचा आकार समाज जुदा हो जाता है।
 		</p>
 		
 		<iframe id="mini_checkerboard" playable src="play/mini/mini_checkerboard.html" width="730" height="240" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
@@ -130,11 +130,11 @@
 		</p>
 		<p>	
 			समानता एक अस्थिर संतुलन है।
-			बहुत ही लघु व्यक्तिगत झुकाव पूरे समाज को पृथक्करण की चिकनी ढलान पे धकेल सकता है।
+			बहुत ही लघु व्यक्तिगत झुकाव पूरे समाज को पृथक्करण की चिकनी ढलान पर धकेल सकता है।
 			पर क्या होगा यदि इन बहुभुजों का आकारवाद समाप्त कर दिया जाए? (या बढ़ा दिया जाए?)
 		</p>
 		<div class="instruction">
-			स्लाईडर द्वारा बहुभुजों की आकारवाद मात्रा बदलें:
+			स्लाईडर द्वारा बहुभुजों का आकारवादी झुकाव बदलें:
 		</div>
 	</div>
 
@@ -159,7 +159,7 @@
 		</div>
 
 		<p>
-			तो क्या सबका आकारवादी झुकाव शून्य कर देना ही समाधान है? नहीं! वास्तविक समाज में लोग पहले से ही अनियमित ढंग से नहीं बसे होंगे। और ना ही प्रतिदिन इस प्रकार फेरबदल करेंगे।
+			तो क्या सबका आकारवादी झुकाव शून्य कर देना ही समाधान है? नहीं! वास्तविक समाज में लोग पूर्वतः अनियमित ढंग से नहीं बसे होंगे, और ना ही प्रतिदिन इस प्रकार फेरबदल करेंगे।
 		</p>
 
 		<div class="instruction">
@@ -184,7 +184,7 @@
 		<iframe id="mini_nonconform" playable src="play/mini/mini_nonconform.html" width="400" height="440" scrolling="no" style="margin:0 auto;display:block" embedded></iframe>
 
 		<p>
-			ये क्या? यद्यपि हर बहुभुज ९०% तक भी हम-आकार पड़ोसी होने से सहमत हैं, परन्तु समाज की विविधता बढ़ गयी!
+			ये क्या? यद्यपि हर बहुभुज ९०% तक भी हमआकार पड़ोसी होने से सहमत हैं, परन्तु समाज की विविधता बढ़ गयी!
 			इसी को अब बड़े स्तर पर देखते हैं।
 			अब हम बहुभुजों के आकारवादी झुकाव के साथ-साथ "विविधतावादी" झुकाव को भी बदल पाएँगे।
 		</p>
@@ -206,7 +206,7 @@
 		</p>
 		<p style="text-align:center">
 			<b>
-				इन सब को
+				इन बहुभुजों को
 				<span style="color:hsl(0,90%,60%)">मि</span>
 				<span style="color:hsl(108,90%,60%)">त्र</span>
 				<span style="color:hsl(216,90%,60%)">ता</span>	
@@ -223,7 +223,7 @@
 		</p>
 
 		<div class="instruction">
-			अंततः, एक सम्पूर्ण अनुकरण, प्रयोग के लिए।
+			अंततः, एक सम्पूर्ण अनुरूपण, प्रयोग के लिए।
 		</div>
 	</div>
 
@@ -246,7 +246,7 @@
 		<p>
 			<b>२. अतीत वर्तमान को प्रभावित करता है।</b>
 			<br>
-			मेज़ पर खाना गीराना बंद करने से वह अपने आप हमेशा साफ नहीं रहता। 
+			मेज़ पर खाना गीराना बंद करने से वह अपने आप हमेशा साफ नहीं रहेगा। 
 			समानता बनाए रखना स्वच्छता बनाए रखने के समान है। इसके लिए निरंतर श्रम करने की ज़रूरत है।
 		</p>
 		<p>
@@ -270,14 +270,14 @@
 				यह पृथक्करण की चर्चा नोबेल पुरस्क्रित सिद्धांतकार Thomas Schelling के कार्य पर आधारित है; विशेषतः उनके १९७१ में प्रकाशित लेख, 
 				<a target="_blank" href="http://www.stat.berkeley.edu/~aldous/157/Papers/Schelling_Seg_Models.pdf">
 				Dynamic Models of Segregation</a> पर।
-				इस लेख के तत्वों पे आगे गठन करते हुए, हमने दर्शाया कि कैसे बहुत ही थोड़ी विविधता की माँग से पूर्व-पृथक्कृत समाज को सुधारा जा सकता है। 
+				इस लेख के तत्वों पे आगे गठन करते हुए, हमने दर्शाया कि कैसे ज़रा सी विविधता की माँग से पूर्व-पृथक्कृत समाज को सुधारा जा सकता है। 
 				दूसरे शब्दों में, हमने उनके माॅडल को एक सुखद अंजाम दिया। 
 
 				<br><br>
 
 				यद्यपि Schelling के माॅडल का सार सही है, परन्तु वास्तविक जीवन निश्चित रूप से काफि ज़्यादा जटिल है। 
 				यदि आपकी वास्तविक डाटा में रूचि है, तो आप W.A.V. Clark का १९९१ में प्रकाशित लेख,
-				<a target="_blank" href="http://smg.media.mit.edu/library/Clark.ResidentialSegregation.pdf">A Test of the Schelling Segregation Model</a> पढ़ सकते हैं।
+				<a target="_blank" href="http://smg.media.mit.edu/library/Clark.ResidentialSegregation.pdf">A Test of the Schelling Segregation Model</a>, पढ़ सकते हैं।
 
 				<br><br>
 
@@ -291,7 +291,7 @@
 
 				<br><br>
 
-				आज का "मूल नैतिक संदेश&trade;" है कि अपने आस-पड़ोस में ज़रा सी विविधता की माँग व्यापक बदलाव का कारण बन सकती है। 
+				आज का "मूल नैतिक संदेश&trade;" यह है कि अपने आस-पड़ोस में ज़रा सी विविधता की माँग व्यापक बदलाव का कारण बन सकती है। 
 				<a target="_blank" href="http://plzdiversifyyourpanel.tumblr.com/">Plz Diversify Your Panel</a> एक पहल है जहाँ वक्ता प्रण लेते हैं कि वे ऐसे पैनल में भाग नहीं लेंगे जिनमें विविधता का अभाव हो।  
 
 				<br><br>
@@ -327,7 +327,7 @@
 					- ओपन सोर्स आदर्श से जुड़ी स्त्रियों का समर्थन करते हैं
 					<br>
 					<a target="_blank" href="http://www.patreon.com/ncase">Nicky's Patreon</a>
-					- सार्वजनिक क्षेत्र में संवादात्मक लेख बनाती हैं (इस लेख की तरह!)
+					- सार्वजनिक क्षेत्र में संवादात्मक कृतियाँ बनाती है (इस लेख की तरह!)
 
 				</span>
 
