--- a/play/mini/mini_bias_1.html
+++ b/play/mini/mini_bias_1.html
@@ -7,7 +7,7 @@
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777">
-		यदि हम-आकार पड़ोसी <span style="color:#dd3939">३३% से कम हैं</span> तो
+		यदि हमआकार पड़ोसी <span style="color:#dd3939">३३% से कम हैं</span> तो
 		<br>
 		मैं स्थान बदलूँगा
 	</div>
