--- a/play/mini/mini_happy.html
+++ b/play/mini/mini_happy.html
@@ -8,7 +8,7 @@
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px">
 		<span style="color:#dd3939">सुखी:</span>
-		६ पड़ोसियों मे से २ हम-आकार। ठीक १/३।
+		६ पड़ोसियों मे से २ हमआकार। ठीक १/३।
 	</div>
 
 	<script>
