--- a/play/mini/mini_nonconform.html
+++ b/play/mini/mini_nonconform.html
@@ -7,7 +7,7 @@
 	<canvas id="canvas"></canvas>
 	<br>
 	<div style="text-align:center; margin:0px 0; color:#777">
-		यदि पड़ोसियों में से <span style="color:#dd3939">९०% से ज़्यादा</span> हम-आकार
+		यदि पड़ोसियों में से <span style="color:#dd3939">९०% से ज़्यादा</span> हमआकार
 		<br>
 		हैं तो मैं स्थान बदलूँगा
 	</div>
