--- a/play/mini/mini_unhappy.html
+++ b/play/mini/mini_unhappy.html
@@ -8,7 +8,7 @@
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px">
 		<span style="color:#dd3939">उदास:</span>
-		६ पड़ोसियों में से १ हम-आकार। १/३ से कम।
+		६ पड़ोसियों में से १ हमआकार। १/३ से कम।
 	</div>
 
 	<script>
