--- a/play/outro/outro.html
+++ b/play/outro/outro.html
@@ -65,12 +65,12 @@
 
 			शेयर कीजिए<span style="position:relative;top:-5px">:</span>
 
-			<a data-popup-url="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;t=बहुभुजों की बहुगाथा: निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।"
+			<a data-popup-url="https://www.facebook.com/sharer.php?u=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;t=बहुभुजों की गाथा: निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक लेख।"
 				data-popup-width="626" data-popup-height="436"
 				onclick="return sharePopup.call(this,event);">
 				<img src="icons/facebook.png" width="60" height="60"/></a>
 
-			<a data-popup-url="https://twitter.com/share?url=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;text=बहुभुजों की बहुगाथा: निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा। @vihartvihart एवं @ncasenmare द्वारा।"
+			<a data-popup-url="https://twitter.com/share?url=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;text=बहुभुजों की गाथा: निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक लेख। @vihartvihart एवं @ncasenmare द्वारा।"
 				data-popup-width="640" data-popup-height="400"
 				onclick="return sharePopup.call(this,event);">
 				<img src="icons/twitter.png" width="60" height="60"/></a>
@@ -80,12 +80,12 @@
 				onclick="return sharePopup.call(this,event);">
 				<img src="icons/googleplus.png" width="60" height="60"/></a>
 
-			<a data-popup-url="https://www.tumblr.com/share/link?url=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;name=बहुभुजों की बहुगाथा&amp;description=निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक चर्चा।"
+			<a data-popup-url="https://www.tumblr.com/share/link?url=http%3A%2F%2Fncase.me%2Fpolygons%2F&amp;name=बहुभुजों की गाथा&amp;description=निर्दोष चयनों से उत्पन होने वाले हानिकारक समाज पे एक संवादात्मक लेख।"
 				data-popup-width="446" data-popup-height="430"
 				onclick="return sharePopup.call(this,event);">
 				<img src="icons/tumblr.png" width="60" height="60"/></a>
 
-			<a href="http://www.reddit.com/submit" onclick="window.open('http://www.reddit.com/submit?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'बहुभुजों की बहुगाथा','toolbar=no,width=840,height=750'); return false;">
+			<a href="http://www.reddit.com/submit" onclick="window.open('http://www.reddit.com/submit?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'बहुभुजों की गाथा','toolbar=no,width=840,height=750'); return false;">
         		<img src="icons/reddit.png" alt="submit to reddit" width="60" height="60" border="0"/></a>
 
 			<a href="http://www.stumbleupon.com/submit?url=http://ncase.me/polygons/" target="_blank">
@@ -104,7 +104,7 @@
 				हम हैं - <a href="http://vihart.com/" target="_blank">vi hart</a> और <a href="http://www.patreon.com/ncase" target="_blank">nicky case</a>.
 			</div>
 			<div style="width:600px; margin:25px auto; font-size:18px; letter-spacing:0; font-weight:normal">
-				हमें बताईए कि आप "बहुभुजों की बहुगाथा" का किस प्रकार उपयोग और प्रयोग कर रहे हैं!
+				हमें बताईए कि आप "बहुभुजों की गाथा" का किस प्रकार उपयोग और प्रयोग कर रहे हैं!
 				<br>
 				हमें
 				<a href="https://twitter.com/vihartvihart" target="_blank">@vihartvihart</a> और 
