--- a/play/intro/intro.html
+++ b/play/intro/intro.html
@@ -39,7 +39,7 @@
 		<canvas id="canvas" width="1280" height="300" style="position:absolute;bottom:0"></canvas>
 		<div id="intro_shading"></div>
 		<div id="intro_text">
-			द्वारा <a href="http://vihart.com/" target="_blank">vi hart</a> + <a href="http://www.patreon.com/ncase" target="_blank">nicky case</a>
+			<a href="http://vihart.com/" target="_blank">vi hart</a> + <a href="http://www.patreon.com/ncase" target="_blank">nicky case</a> द्वारा 
 			<div style='font-size:14px; letter-spacing:0; line-height:20px; margin-top:15px'>
 				<a target="_parent" href="http://ncase.me/polygons-es">español</a>
 				|
