--- a/play/mini/mini_bored.html
+++ b/play/mini/mini_bored.html
@@ -8,7 +8,7 @@
 	<br>
 	<div style="text-align:center; margin:10px 0; color:#777; font-size:15px">
 		<span style="color:#dd3939">विरक्त:</span>
-		सारे पड़ोसी हम-आकार। (पड़ोसियों की अनुपस्थिती में भी विरकत)
+		सारे पड़ोसी हमआकार। (पड़ोसियों की अनुपस्थिती में भी विरक्त)
 	</div>
 
 	<script>
